doc/windows/Delphi/32bit/multi_card/gts.pas


function GT_PrfPt(cardNum:SmallInt ;profile : SmallInt; mode:SmallInt = PT_MODE_STATIC): SmallInt; stdcall; External GTDLL;
function GT_SetPtLoop(cardNum:SmallInt ;profile : SmallInt;ptLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_GetPtLoop(cardNum:SmallInt ;profile : SmallInt; out pLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_PtSpace(cardNum:SmallInt ;profile : SmallInt; out pSpace:SmallInt; fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtData(cardNum:SmallInt ;profile : SmallInt;pos:Double;time:LongInt; mytype:SmallInt = PT_SEGMENT_NORMAL;fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtDataWN(cardNum:SmallInt ;profile:SmallInt;pos:Double;time:LongInt;ptDataType:SmallInt=PT_SEGMENT_NORMAL;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_PtClear(cardNum:SmallInt ;profile : SmallInt; fifo:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_PtStart(cardNum:SmallInt ;mask:LongInt;fifoOption:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetPtMemory(cardNum:SmallInt ;profile : SmallInt; memory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtMemory(cardNum:SmallInt ;profile : SmallInt; out pMemory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtGetSegNum(cardNum:SmallInt ;profile:SmallInt;out pSegNum:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtPrecisionMode(cardNum:SmallInt ;profile:SmallInt;precisionMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtPrecisionMode(cardNum:SmallInt ;profile:SmallInt;out pPrecisionMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtVel(cardNum:SmallInt ;profile:SmallInt;velLast:Double;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetPtLink(cardNum:SmallInt ;profile:SmallInt;fifo:SmallInt;list:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetPtLink(cardNum:SmallInt ;profile:SmallInt;fifo:SmallInt;out pList:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtDoBit(cardNum:SmallInt ;profile:SmallInt;doType:SmallInt;index:SmallInt;value:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PtAo(cardNum:SmallInt ;profile:SmallInt;aoType:SmallInt;index:SmallInt;value:Double;fifo:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_PrfGear(cardNum:SmallInt ;profile : SmallInt; dir:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetGearMaster(cardNum:SmallInt ;profile : SmallInt;masterIndex : SmallInt;masterType : SmallInt=GEAR_MASTER_PROFILE; masterItem:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetGearMaster(cardNum:SmallInt ;profile : SmallInt;out pMasterIndex : SmallInt; out pMasterType : SmallInt; out pMasterItem:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetGearRatio(cardNum:SmallInt ;profile : SmallInt;masterEven:LongInt;slaveEven:LongInt; masterSlope:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetGearRatio(cardNum:SmallInt ;profile : SmallInt; out pMasterEven:LongInt;out pSlaveEven:LongInt; out pMasterSlope:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GearStart(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetGearEvent(cardNum:SmallInt ;profile:SmallInt;event:SmallInt;startPara0:LongInt;startPara1:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetGearEvent(cardNum:SmallInt ;profile:SmallInt;out pEvent:SmallInt;out pStartPara0:LongInt;out pStartPara1:LongInt): SmallInt; stdcall; External GTDLL;

function GT_PrfFollow(cardNum:SmallInt ;profile : SmallInt; dir:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetFollowMaster(cardNum:SmallInt ;profile : SmallInt;masterIndex : SmallInt;masterType : SmallInt=FOLLOW_MASTER_PROFILE; masterItem:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetFollowMaster(cardNum:SmallInt ;profile : SmallInt;out pMasterIndex : SmallInt;out pMasterType : SmallInt; out pMasterItem:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowLoop(cardNum:SmallInt ;profile : SmallInt;followLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_GetFollowLoop(cardNum:SmallInt ;profile : SmallInt; out pLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_SetFollowEvent(cardNum:SmallInt ;profile : SmallInt;followEvent : SmallInt;masterDir : SmallInt; pos:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetFollowEvent(cardNum:SmallInt ;profile : SmallInt; out pEvent : SmallInt; out pMasterDir : SmallInt;  out pPos:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_FollowSpace(cardNum:SmallInt ;profile : SmallInt; out pSpace:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowData(cardNum:SmallInt ;profile : SmallInt;masterSegment:LongInt;slaveSegment:Double; mytype:SmallInt = FOLLOW_SEGMENT_NORMAL;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowClear(cardNum:SmallInt ;profile:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowStart(cardNum:SmallInt ;mask:LongInt;fifoOption:LongInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowSwitch(cardNum:SmallInt ;mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowMemory(cardNum:SmallInt ;profile:SmallInt;memory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowMemory(cardNum:SmallInt ;profile:SmallInt;out pMemory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowStatus(cardNum:SmallInt ;profile:SmallInt;out pFifoNum:SmallInt;out pSwitchStatus:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowPhasing(cardNum:SmallInt ;profile:SmallInt;profilePhasing:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowPhasing(cardNum:SmallInt ;profile:SmallInt;out pProfilePhasing:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_Compile(cardNum:SmallInt ;pFileName:String;out pWrongInfo:TCompileInfo): SmallInt; stdcall; External GTDLL;
function GT_Download(cardNum:SmallInt ;pFileName:String): SmallInt; stdcall; External GTDLL;

function GT_GetFunId(cardNum:SmallInt ;pFunName : String;out funId : SmallInt): SmallInt; stdcall; External GTDLL;
function GT_Bind(cardNum:SmallInt ;thread : SmallInt;funId : SmallInt;page:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_RunThread(cardNum:SmallInt ;thread:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_StopThread(cardNum:SmallInt ;thread:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PauseThread(cardNum:SmallInt ;thread:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetThreadSts(cardNum:SmallInt ;thread : SmallInt; out pThreadSts:TThreadSts): SmallInt; stdcall; External GTDLL;

function GT_GetVarId(cardNum:SmallInt ;pFunName : String;pVarName:String;out pVarInfo : TVarInfo): SmallInt; stdcall; External GTDLL;
function GT_SetVarValue(cardNum:SmallInt ;page:SmallInt;var pVarInfo:TVarInfo;var pValue:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
function GT_GetVarValue(cardNum:SmallInt ;page:SmallInt;var pVarInfo:TVarInfo;out pValue:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
